--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,10 @@ jobs:
         name: drop1
         path: |
            ./file1.txt
+           
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: drop2
+        path: |
+           ./file2.txt
