--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -22,6 +22,7 @@ jobs:
 
     - name: bash
       run: | 
-        ls -la
         cd drop1
-        ls -la        
+        ls -la 
+        cd drop2
+        ls -la
