--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -23,7 +23,7 @@ jobs:
     - name: bash
       run: | 
         ls -la
-        cd drop1
+        cd ./drop1
         ls -la 
-        cd drop2
+        cd ./drop2
         ls -la
