--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -31,3 +31,9 @@ jobs:
         ls -la
         cd ./drop2
         ls -la
+        
+    - name: Set tar environment variable
+      run: echo "tar=mytar1" >> $GITHUB_ENV
+
+    - name: Use tar variable
+      run: echo "The tar file is $tar"
