--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -7,7 +7,17 @@ on:
       - completed
       - success
   workflow_dispatch:
-
+    inputs:
+      build_workflow_run_id:
+        type: string
+        description: 'Build workflow run id (to retrieve artifacts)'
+        required: true
+        default: '-'  
+      Auto_trigger:
+        type: boolean
+        description: True or False2  
+        default: true
+        
 jobs:
   build-test:
     name: Build 
@@ -24,6 +34,14 @@ jobs:
         workflow_conclusion: success
         repo: ${{ github.repository }}
         if_no_artifact_found: fail
+
+    - name: Download Build artifact
+      uses: actions/download-artifact@v4.1.0
+      with:
+        name: drop
+        path: drop
+        run-id: ${{ inputs.build_workflow_run_id }}
+        github-token: ${{ github.token }}        
 
     - name: bash
       run: | 
