--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -40,8 +40,8 @@ jobs:
       if: ${{  github.event.inputs.auto_trigger == 'false' }}                   
       uses: actions/download-artifact@v4.1.0
       with:
-        name: drop
-        path: drop
+        name: drop1
+        path: drop1
         run-id: ${{ inputs.build_workflow_run_id }}
         github-token: ${{ github.token }}        
 
