--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -27,7 +27,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Download latest artifact from Payload CI pipeline
-      if: ${{  github.event.inputs.trigger == 'auto' }}               
+      if: github.event_name != 'workflow_dispatch'    
       id: download-artifact
       uses: dawidd6/action-download-artifact@v2
       with:
@@ -37,7 +37,7 @@ jobs:
         if_no_artifact_found: fail
 
     - name: Download Build artifact from pipeline run number
-      if: ${{  github.event.inputs.trigger == 'manual' }}                   
+      if: github.event_name == 'workflow_dispatch'
       uses: actions/download-artifact@v4.1.0
       with:
         name: drop1
