--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   deploy-dev:  
     name: devdeploy 
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/dev'
     
     runs-on: ubuntu-latest
 
