--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,11 @@ jobs:
         name: drop2
         path: |
            ./file2.txt           
-           
-    - name: Set custom value
+        
+
+    - name: Set output value
       id: set_value
-      run: echo "::set-output name=custom_value::dev"
+      run: echo "dev=dev" >> $GITHUB_ENV
 
     outputs:
-      custom_value: ${{ steps.set_value.outputs.custom_value }}           
+      dev_value: ${{ steps.set_value.outputs.dev_value }}
