--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -23,7 +23,8 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Get custom value from CI
-      run: echo "The custom value from CI is ${{ github.event.workflow_run.outputs.custom_value }}"
+      run: echo "The custom value from CI is ${{ github.event.workflow_run.outputs.result }}" 
+      
 
     - name: Download latest artifact from Payload CI pipeline
       if: github.event_name != 'workflow_dispatch'    
