--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,13 +25,20 @@ jobs:
         path: |
            ./file2.txt           
       
+  build:
+    runs-on: ubuntu-latest
 
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
 
-    - name: Set custom output
-      id: set_output
-      run: |
-        echo "custom_value=some_value" >> $GITHUB_ENV
-          
+      - name: Set version output
+        id: set_version
+        run: |
+          VERSION="1.0.${{ github.run_number }}"
+          echo "VERSION=${VERSION}" >> $GITHUB_ENV
+          echo "::set-output name=version::${VERSION}"
+
     outputs:
-      result: ${{ steps.set_output.outputs.custom_value }}  # This output will be used later
+      version: ${{ steps.set_version.outputs.version }}  # Expose version as output
 
