--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -22,7 +22,7 @@ on:
 jobs:
   deploy-dev:  
     name: devdeploy 
-    if: github.event_name != 'workflow_dispatch' && ${{ inputs.deploy_env }} == 'dev'
+    if: github.event_name != 'workflow_dispatch'
     
     runs-on: ubuntu-latest
 
