--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -22,7 +22,8 @@ on:
 jobs:
   deploy-dev:  
     name: devdeploy 
-    if: github.event_name != 'workflow_dispatch'
+    if: ${{ inputs.deploy_env }} == 'dev'
+     # if: github.event_name != 'workflow_dispatch'
     
     runs-on: ubuntu-latest
 
@@ -62,7 +63,9 @@ jobs:
 
   deploy-qa:
     name: qadeploy 
-    if: github.event_name == 'workflow_dispatch'
+    if: ${{ inputs.deploy_env }} == 'pat'
+    
+    #if: github.event_name == 'workflow_dispatch'
     
     runs-on: ubuntu-latest
 
