--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -22,7 +22,7 @@ on:
 jobs:
   deploy-dev:  
     name: devdeploy 
-    if: ${{ inputs.deploy_env == 'dev' }}
+    if: github.event_name != 'workflow_dispatch' && ${{ inputs.deploy_env == 'dev' }}
      # if: github.event_name != 'workflow_dispatch'
     
     runs-on: ubuntu-latest
@@ -63,9 +63,8 @@ jobs:
 
   deploy-qa:
     name: qadeploy 
-    if: ${{ inputs.deploy_env == 'pat' }}
     
-    #if: github.event_name == 'workflow_dispatch'
+    if: github.event_name == 'workflow_dispatch' && ${{ inputs.deploy_env == 'pat' }}
     
     runs-on: ubuntu-latest
 
