--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -19,6 +19,8 @@ on:
       
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.head_branch == 'qa' }}    
+  
     runs-on: ubuntu-latest
 
     steps:
