--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -25,8 +25,8 @@ on:
 jobs:
   deploy-dev:  
     name: devdeploy 
-    if: github.event_name != 'workflow_dispatch' && ${{ inputs.deploy_env == 'dev' }}
-     # if: github.event_name != 'workflow_dispatch'
+    if: ${{ github.event.workflow_run.head_branch == 'qa' }}    
+    # if: github.event_name != 'workflow_dispatch' && ${{ inputs.deploy_env == 'dev' }}
     
     runs-on: ubuntu-latest
 
