--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -25,7 +25,7 @@ on:
 jobs:
   deploy-dev:  
     name: devdeploy 
-    if: ${{ github.event.workflow_run.head_branch == 'qa' }}    
+    if: ${{ github.event.workflow_run.head_branch == 'dev' }}    
     # if: github.event_name != 'workflow_dispatch' && ${{ inputs.deploy_env == 'dev' }}
     
     runs-on: ubuntu-latest
@@ -66,8 +66,9 @@ jobs:
 
   deploy-qa:
     name: qadeploy 
+    if: ${{ github.event.workflow_run.head_branch == 'qa' }}    
     
-    if: github.event_name == 'workflow_dispatch' && ${{ inputs.deploy_env == 'pat' }}
+    #if: github.event_name == 'workflow_dispatch' && ${{ inputs.deploy_env == 'pat' }}
     
     runs-on: ubuntu-latest
 
