--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -106,3 +106,43 @@ jobs:
 
     - name: Use tar variable
       run: echo "The tar file is $tar"      
+
+  deploy-environment:
+    name: deploytoothers    
+    if: github.event_name == 'workflow_dispatch' && ${{ inputs.deploy_env == 'pat' }}
+    
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    
+    - name: Download latest artifact from Payload CI pipeline
+      if: github.event_name != 'workflow_dispatch'    
+      id: download-artifact
+      uses: dawidd6/action-download-artifact@v2
+      with:
+        workflow: main.yml
+        workflow_conclusion: success
+        repo: ${{ github.repository }}
+        if_no_artifact_found: fail
+
+    - name: Download Build artifact from pipeline run number
+      if: github.event_name == 'workflow_dispatch'
+      uses: actions/download-artifact@v4.1.0
+      with:
+        name: drop1
+        path: drop1
+        run-id: ${{ inputs.build_workflow_run_id }}
+        github-token: ${{ github.token }}        
+
+    - name: bash
+      run: | 
+        ls -la
+        cd ./drop1
+        ls -la        
+        
+    - name: Set tar environment variable
+      run: echo "tar=mytar1" >> $GITHUB_ENV
+
+    - name: Use tar variable
+      run: echo "The tar file is $tar"            
