--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -35,7 +35,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Download latest artifact from Payload CI pipeline
-      if: github.event_name != 'workflow_dispatch'    
+      if: github.event_name != 'workflow_dispatch' && github.event_name != 'workflow_dispatch'      
       id: download-artifact
       uses: dawidd6/action-download-artifact@v2
       with:
@@ -67,7 +67,7 @@ jobs:
 
   deploy-qa:
     name: qadeploy 
-    if: ${{ github.event.workflow_run.head_branch == 'qa' }}    
+    if: ${{ github.event.workflow_run.head_branch == 'qa' }} && github.event_name != 'workflow_dispatch'   
     
     #if: github.event_name == 'workflow_dispatch' && ${{ inputs.deploy_env == 'pat' }}
     
@@ -109,7 +109,7 @@ jobs:
 
   deploy-environment:
     name: deploytoothers    
-    if: github.event_name == 'workflow_dispatch' && ${{ inputs.deploy_env == 'pat' }}
+    if: ${{ inputs.deploy_env == 'pat' }} && github.event_name == 'workflow_dispatch'
     
     runs-on: ubuntu-latest
 
