--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -109,8 +109,7 @@ jobs:
 
   deploy-environment:
     name: deploytoothers    
-    if: ${{ inputs.deploy_env == 'pat' }} && github.event_name == 'workflow_dispatch'
-    
+    if: ${{ github.event.workflow_run.head_branch != 'qa' }} && github.event_name == 'workflow_dispatch'     
     runs-on: ubuntu-latest
 
     steps:
