--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -6,10 +6,6 @@ on:
     types:
       - completed
       - success
-    branches:
-      - main 
-      - qa
-      - dev 
   workflow_dispatch:
     inputs:
       build_workflow_run_id:
@@ -67,9 +63,9 @@ jobs:
 
   deploy-qa:
     name: qadeploy 
-    if: ${{ github.event.workflow_run.head_branch == 'qa' }} && github.event_name != 'workflow_dispatch'   
+    if: ${{ github.event.workflow_run.head_branch == 'qa' }}    
     
-    #if: github.event_name == 'workflow_dispatch' && ${{ inputs.deploy_env == 'pat' }}
+      #if: github.event_name == 'workflow_dispatch' && ${{ inputs.deploy_env == 'pat' }}
     
     runs-on: ubuntu-latest
 
@@ -109,7 +105,7 @@ jobs:
 
   deploy-environment:
     name: deploytoothers    
-    if: ${{ github.event.workflow_run.head_branch != 'qa' }} && github.event_name == 'workflow_dispatch'     
+    if: github.event_name == 'workflow_dispatch'     
     runs-on: ubuntu-latest
 
     steps:
