--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -105,7 +105,7 @@ jobs:
 
   deploy-environment:
     name: deploytoothers    
-    if: github.event_name == 'workflow_dispatch'     
+    if: github.event_name == 'workflow_dispatch' && ${{ inputs.deploy_env == 'pat' }}     
     runs-on: ubuntu-latest
 
     steps:
