--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -61,9 +61,9 @@ jobs:
     - name: Use tar variable
       run: echo "The tar file is $tar"
 
-  deploy-qa:
+  deploy-par:
     name: qadeploy 
-    if: ${{ github.event.workflow_run.head_branch == 'qa' }}    
+    if: ${{ github.event.workflow_run.head_branch == 'release/*' && github.event.workflow_run.conclusion == 'success' }}   
     
       #if: github.event_name == 'workflow_dispatch' && ${{ inputs.deploy_env == 'pat' }}
     
